tests/old_invalid/init_lifetime.stderr
error: no rules expected the token `(`
  --> $DIR/init_lifetime.rs:11:30
   |
11 | unsync_once_self_cell!(derive(), InvalidLifetime, String, CustomType);
   |                              ^ no rules expected this token in macro call

error[E0433]: failed to resolve: use of undeclared type `InvalidLifetime`
  --> $DIR/init_lifetime.rs:15:17
   |
15 |         let c = InvalidLifetime::new(".".repeat(4000));
   |                 ^^^^^^^^^^^^^^^ use of undeclared type `InvalidLifetime`

error[E0759]: `x` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
 --> $DIR/init_lifetime.rs:7:16
  |
6 |     fn from(x: &String) -> Self {
  |                ------- this data with an anonymous lifetime `'_`...
7 |         Self(x.as_ref())
  |              --^^^^^^-- ...is captured and required to live as long as `'static` here
